# cardmgr-gnumach

./: .cvsignore  COPYING  Makefile  Makefile.am  README  configure.ac
.depfiles/: lex_config.d  yacc_config.d
etc/: Makefile  Makefile.am  config  config.opts  network  pcmcia.conf  rc.pcmcia
etc/cis/: Makefile.am
src/: .cvsignore  Makefile  Makefile.am  cardctl.c  cardmgr.c  lex_config.c  mach-ioctl.c  mach-ioctl.h  mach-ioctls.h
src/pcmcia/: Makefile.am  config.h
