SUBDIRS = cis

dist_pkgsysconf_SCRIPTS = \
	ftl \
	ide \
	ieee1394 \
	memory \
	network \
	parport \
	scsi \
	serial \
	wireless

dist_pkgsysconf_DATA = \
	config \
	config.opts \
	ftl.opts \
	ide.opts \
	ieee1394.opts \
	memory.opts \
	network.opts \
	parport.opts \
	scsi.opts \
	serial.opts \
	shared \
	wireless.opts \
	$(cis_files)

