
cisdir = ${pkgsysconfdir}/cis

dist_cis_DATA = \
	3CCFEM556.cis \
	3CCFEM556.dat \
	3CXEM556.cis \
	3CXEM556.dat \
	COMpad2.cis \
	COMpad2.dat \
	COMpad4.cis \
	COMpad4.dat \
	DP83903.cis \
	DP83903.dat \
	E-CARD.cis \
	E-CARD.dat \
	LA-PCM.cis \
	LA-PCM.dat \
	MT5634ZLX.cis \
	MT5634ZLX.dat \
	Makefile \
	NE2K.cis \
	NE2K.dat \
	PCMLM28.cis \
	PCMLM28.dat \
	PE-200.cis \
	PE-200.dat \
	PE520.cis \
	PE520.dat \
	RS-COM-2P.cis \
	RS-COM-2P.dat \
	tamarack.cis \
	tamarack.dat
